<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>

    <LinearLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/species_autocomplete"
                    android:layout_width="192dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:hint="@string/pokemon_name" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="34dp"
                        android:layout_weight="1"
                        android:text="@string/base_stats"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/iv_s"
                        android:textStyle="bold" />
                </LinearLayout>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="15dp">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/editHP"
                            android:layout_width="141dp"
                            android:layout_height="match_parent"
                            android:ems="10"
                            android:hint="@string/hp"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/basehp_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/hpivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editAtk"
                            android:layout_width="130dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/atk"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/baseatk_text"
                            android:layout_width="64dp"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/atkivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editDef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/def"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/basedef_text"
                            android:layout_width="64dp"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/defivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editSpAtk"
                            android:layout_width="116dp"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/sp_atk"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/basespatk_text"
                            android:layout_width="64dp"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/spatkivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editSpDef"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/sp_def"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/basespdef_text"
                            android:layout_width="64dp"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/spdefivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp">

                        <EditText
                            android:id="@+id/editSpeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/spd"
                            android:inputType="number"
                            android:maxLength="3" />

                        <TextView
                            android:id="@+id/basespeed_text"
                            android:layout_width="64dp"
                            android:layout_height="46dp"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/spdivtext"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/_0"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp">

                        <EditText
                            android:id="@+id/natureEdit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/nature"
                            android:inputType="textPersonName" />

                        <EditText
                            android:id="@+id/editLevel"
                            android:layout_width="51dp"
                            android:layout_height="45dp"
                            android:ems="10"
                            android:hint="@string/level"
                            android:inputType="number"
                            android:text="@string/_100" />

                        <Button
                            android:id="@+id/calculate_button"
                            android:layout_width="91dp"
                            android:layout_height="43dp"
                            android:text="@string/calculate"
                            android:textSize="12sp" />
                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="100dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/calculator_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>